add contact page

--- a/app/templates/tab-contacts.html
+++ b/app/templates/tab-contacts.html
@@ -1,7 +1,7 @@
 <ion-view title="Contacts">
     <ion-content class="has-header">
         <ion-list>
-            <ion-item ng-repeat="contact in contacts" type="item-text-wrap" href="#/tab/contact/{{contact.id}}">
+            <ion-item ng-repeat="contact in contacts" type="item-text-wrap" href="#/tab/contacts/{{contact.id}}">
                 {{contact.firstName}} {{contact.lastName}}
             </ion-item>
         </ion-list>
