--- a/app/templates/contact-detail.html
+++ b/app/templates/contact-detail.html
@@ -5,7 +5,8 @@
   The Friends service returns an array of friend data
 -->
 <ion-view title="{{contact.firstName}} {{contact.lastName}}">
-  <ion-content has-header="true" padding="true">
-  	<h1>{{contact.firstName}} {{contact.lastName}}</h1>
-  </ion-content>
+    <ion-content has-header="true" padding="true">
+        <h1>{{contact.firstName}} {{contact.lastName}}</h1>
+        <h2>{{ eta.time }} minutes</h2>
+    </ion-content>
 </ion-view>
