--- a/app/templates/tab-contacts.html
+++ b/app/templates/tab-contacts.html
@@ -2,7 +2,7 @@
     <ion-content class="has-header">
         <ion-list>
             <ion-item ng-repeat="contact in contacts" type="item-text-wrap" href="#/tab/contacts/{{contact.id}}">
-                {{contact.firstName}} {{contact.lastName}}
+                {{ contact.name }}
             </ion-item>
         </ion-list>
     </ion-content>
