--- a/app/templates/tabs.html
+++ b/app/templates/tabs.html
@@ -11,15 +11,15 @@
     </ion-tab>
 
     <!-- Pets Tab -->
-    <ion-tab title="Dashboard" icon="icon ion-home" href="#/tab/dash">
+    <!-- <ion-tab title="Dashboard" icon="icon ion-home" href="#/tab/dash">
         <ion-nav-view name="tab-dash"></ion-nav-view>
-    </ion-tab>
+    </ion-tab> -->
 
 
     <!-- Adopt Tab -->
-    <ion-tab title="Friends" icon="icon ion-heart" href="#/tab/friends">
+    <!-- <ion-tab title="Friends" icon="icon ion-heart" href="#/tab/friends">
         <ion-nav-view name="tab-friends"></ion-nav-view>
-    </ion-tab>
+    </ion-tab> -->
 
 
     <!-- About Tab -->
