--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -1,27 +1,62 @@
-<div class="modal">
+<div class="modal" ng-controller="SignInCtrl">
     <ion-header-bar>
-        <h1 class="title">Sign In</h1>
+        <a class="button icon-left ion-chevron-left button-clear button-dark" ng-show="isShowingBack" ng-click="goBack()">Back</a>
+        <h1 class="title">ETA</h1>
     </ion-header-bar>
     <ion-content>
-        <div ng-controller="SignInCtrl">
-            <div class="list">
-                <label class="item item-input">
-                    <span class="input-label">Email</span>
-                    <input type="text" ng-model="user.email">
-                </label>
-                <label class="item item-input">
-                    <span class="input-label">Password</span>
-                    <input type="password" ng-model="user.password">
-                </label>
-            </div>
-            <div class="padding">
-                <button class="button button-block button-positive" ng-click="signIn(user)">
-                    Sign-In
+        <div>
+            <div class="padding" ng-hide="isShowingBack">
+                <button class="button button-block button-positive" ng-click="goToSignin()">
+                    Sign in
                 </button>
-                <p class="text-center">
-                    <a href="#/forgot-password">Forgot password</a>
-                </p>
+                <button class="button button-block button-light" ng-click="goToRegister()">
+                    Register
+                </button>
             </div>
+
+            <div ng-show="page == 'register'">
+                <div class="list">
+                    <label class="item item-input">
+                        <span class="input-label">Name</span>
+                        <input type="text" ng-model="user.name">
+                    </label>
+                    <label class="item item-input">
+                        <span class="input-label">Email</span>
+                        <input type="email" ng-model="user.email">
+                    </label>
+                    <label class="item item-input">
+                        <span class="input-label">Password</span>
+                        <input type="password" ng-model="user.password">
+                    </label>
+                </div>
+                <div class="padding">
+                    <button class="button button-block button-positive" ng-click="register(user)">
+                        Register
+                    </button>
+                </div>
+            </div>
+
+            <div ng-show="page == 'signin'">
+                <div class="list">
+                    <label class="item item-input">
+                        <span class="input-label">Email</span>
+                        <input type="email" ng-model="user.email">
+                    </label>
+                    <label class="item item-input">
+                        <span class="input-label">Password</span>
+                        <input type="password" ng-model="user.password">
+                    </label>
+                </div>
+                <div class="padding">
+                    <button class="button button-block button-positive" ng-click="signIn(user)">
+                        Sign-In
+                    </button>
+                    <p class="text-center">
+                        <a href="#/forgot-password">Forgot password</a>
+                    </p>
+                </div>
+            </div>
+
         </div>
     </ion-content>
 </div>
