--- a/app/templates/contact-detail.html
+++ b/app/templates/contact-detail.html
@@ -8,7 +8,10 @@
     <ion-content has-header="true" padding="true">
         <p style="text-align: center;">ETA</p>
         <h1 style="text-align: center;" ng-hide="eta">calculating...</h1>
-        <h1 style="text-align: center;" ng-show="eta">{{ eta.time / 60 | number:0 }}</h1>
-        <p style="text-align: center;">minutes</p>
+        <h1 style="text-align: center;" ng-show="eta">
+            {{ minutes }}
+            <small>:{{ seconds }}</small>
+        </h1>
+        <!-- <p style="text-align: center;">minutes</p> -->
     </ion-content>
 </ion-view>
