Lots of changes

--- a/app/templates/tabs.html
+++ b/app/templates/tabs.html
@@ -3,29 +3,34 @@
   Each tab's child <ion-nav-view> directive will have its own 
   navigation history that also transitions its views in and out.
 -->
-<ion-tabs class="tabs-icon-top">
 
-    <!-- Pets Tab -->
-    <ion-tab title="Contacts" icon="icon ion-home" href="#/tab/contacts">
-        <ion-nav-view name="tab-contacts"></ion-nav-view>
-    </ion-tab>
+<ion-nav-view name="tab-contacts"></ion-nav-view>
 
-    <!-- Pets Tab -->
-    <!-- <ion-tab title="Dashboard" icon="icon ion-home" href="#/tab/dash">
+<!-- <ion-nav-view name="tab-contacts"></ion-nav-view> -->
+
+<!-- <ion-tabs class="tabs-icon-top"> -->
+
+<!-- Pets Tab -->
+<!-- <ion-tab title="Contacts" icon="icon ion-home" href="#/tab/contacts"> -->
+
+<!-- </ion-tab> -->
+
+<!-- Pets Tab -->
+<!-- <ion-tab title="Dashboard" icon="icon ion-home" href="#/tab/dash">
         <ion-nav-view name="tab-dash"></ion-nav-view>
     </ion-tab> -->
 
 
-    <!-- Adopt Tab -->
-    <!-- <ion-tab title="Friends" icon="icon ion-heart" href="#/tab/friends">
+<!-- Adopt Tab -->
+<!-- <ion-tab title="Friends" icon="icon ion-heart" href="#/tab/friends">
         <ion-nav-view name="tab-friends"></ion-nav-view>
     </ion-tab> -->
 
 
-    <!-- About Tab -->
-    <ion-tab title="Settings" icon="icon ion-gear-b" href="#/tab/settings">
+<!-- About Tab -->
+<!--     <ion-tab title="Settings" icon="icon ion-gear-b" href="#/tab/settings">
         <ion-nav-view name="tab-settings"></ion-nav-view>
     </ion-tab>
+ -->
 
-
-</ion-tabs>
+<!-- </ion-tabs> -->
