--- a/app/templates/tab-contacts.html
+++ b/app/templates/tab-contacts.html
@@ -1,13 +1,50 @@
 <ion-view title="Contacts">
+    <ion-nav-buttons side="right">
+        <button class="button" ng-click="signout()">
+            Sign out
+        </button>
+    </ion-nav-buttons>
+
+    <ion-header-bar align-title="left" class="bar bar-subheader bar-stable" style="background-color: #FFFCD7">
+        <h1 class="title" style="font-size: 12px;">Double tap a contact to ping.</h1>
+    </ion-header-bar>
+
     <ion-content class="has-header">
+        <ion-refresher pulling-text="Pull to refresh..." on-refresh="refresh()">
+        </ion-refresher>
         <ion-list>
-            <ion-item ng-repeat="contact in contacts" type="item-text-wrap" href="#/tab/contacts/{{contact.id}}" class="item-icon-left item-icon-right">
-                <i class="icon ion-ios7-location" ng-show="contact.nearby"></i>
-                <i class="icon ion-person" ng-hide="contact.nearby"></i>
-                {{ contact.name }}
-                <span ng-show="contact.nearby">- Nearby</span>
-                <i class="icon ion-chevron-right"></i>
-            </ion-item>
+
+            <div ng-repeat="contact in contacts | orderBy:orderEta">
+                <contact contact="contact"></contact>
+            </div>
+
+            <!-- <div style="width: 40px; height: 40px; background-color: red; float:right; line-height: 40px; color: white; text-align: center;">
+                    
+                </div> -->
+
+            <!-- <h2 ng-click="ping(contact)">
+                    {{ contact.name }}
+                </h2>
+                <a href="http://maps.google.com/maps?ll={{ contact.ping.latitude}},{{ contact.ping.longitude }}" class="button button-positive" ng-show="contact.ping">
+                    <i class="icon ion-map"></i>
+                </a>
+
+                <p ng-click="ping(contact)">
+
+                    
+                    <span am-time-ago="contact.eta.lastSeen" am-preprocess="unix"></span>
+                    <span ng-show="contact.ping">
+                        <span>- {{ contact.ping.address }}</span>
+                    </span> -->
+
+            <!-- <br ng-show="contact.ping" /> -->
+            <!-- <span ng-show="contact.eta">
+                        <span am-time-ago="contact.eta.lastSeenAt" am-preprocess="unix"></span>
+                         <span>{{ contact.eta.lastSeenAt * 1000 | date:'h:mm a' }}</span> -->
+            <!-- </span> -->
+            <!-- /                </p> -->
+
+            <!-- </ion-item> -->
         </ion-list>
     </ion-content>
 </ion-view>
