Add find contacts

--- a/app/templates/tab-contacts.html
+++ b/app/templates/tab-contacts.html
@@ -1,8 +1,9 @@
 <ion-view title="Contacts">
     <ion-nav-buttons side="right">
-        <button class="button" ng-click="signout()">
-            Sign out
+        <button class="button" ui-sref="tab.contacts-find">
+            <i class="icon ion-person-add"></i>
         </button>
+
     </ion-nav-buttons>
 
     <ion-header-bar align-title="left" class="bar bar-subheader bar-stable" style="background-color: #FFFCD7">
