Remove friend search options that aren't available yet.

--- a/app/templates/contacts-find.html
+++ b/app/templates/contacts-find.html
@@ -8,7 +8,7 @@
     <ion-content has-header="true">
         <h1>Find Friends</h1>
         <ion-list>
-            <ion-item>
+            <!--<ion-item>
                 <i class="ion-social-facebook"></i> Find Friends from Facebook
             </ion-item>
             <ion-item>
@@ -16,7 +16,7 @@
             </ion-item>
             <ion-item>
                 <i class="ion-person-stalker"></i> Find Friends from Contacts
-            </ion-item>
+            </ion-item>-->
             <ion-item ui-sref="tab.contacts-findbyname">
                 <i class="ion-search"></i> Search by name
             </ion-item>
