--- a/app/templates/contacts-find.html
+++ b/app/templates/contacts-find.html
@@ -4,9 +4,12 @@
   The FriendsCtrl pulls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-<ion-view title="Add Contacts">
+<ion-view title="Find Contacts">
     <ion-content has-header="true">
-        <h1>Find Contacts</h1>
+        <div class="padding">
+            <h2 style="margin-top: 10px; font-size: 16px; margin-bottom: 0;">Find Contacts</h2>
+        </div>
+
         <ion-list>
             <!--<ion-item>
                 <i class="ion-social-facebook"></i> Find Friends from Facebook
@@ -21,7 +24,10 @@
                 <i class="ion-search"></i> Search by name
             </ion-item>
         </ion-list>
-        <h1>Contact Requests</h1>
+        <div class="padding">
+            <h2 style="margin-top: 10px; font-size: 16px; margin-bottom: 0;">Contact Requests</h2>
+        </div>
+
         <ion-list>
             <ion-item ng-hide="contacts.requested.length">
                 No requests.
