--- a/app/templates/contacts-find.html
+++ b/app/templates/contacts-find.html
@@ -7,7 +7,7 @@
 <ion-view title="Find Contacts">
     <ion-content has-header="true">
         <div class="padding">
-            <h2 style="margin-top: 10px; font-size: 16px; margin-bottom: 0;">Find Contacts</h2>
+            <h2 style="margin-top: 10px; font-size: 16px; margin-bottom: 0;">Find People</h2>
         </div>
 
         <ion-list>
@@ -16,10 +16,10 @@
             </ion-item>
             <ion-item>
                 <i class="ion-social-twitter"></i> Find Friends from Twitter
-            </ion-item>
-            <ion-item>
-                <i class="ion-person-stalker"></i> Find Friends from Contacts
             </ion-item>-->
+            <ion-item ui-sref="tab.contacts-findfromcontacts">
+                <i class="ion-person-stalker"></i> Find People from Contacts
+            </ion-item>
             <ion-item ui-sref="tab.contacts-findbyname">
                 <i class="ion-search"></i> Search by name
             </ion-item>
