Lowered accuracy of GPS

--- a/app/templates/contacts-find.html
+++ b/app/templates/contacts-find.html
@@ -17,9 +17,10 @@
             <ion-item>
                 <i class="ion-social-twitter"></i> Find Friends from Twitter
             </ion-item>-->
-            <ion-item ui-sref="tab.contacts-findfromcontacts">
-                <i class="ion-person-stalker"></i> Find People from Contacts
-            </ion-item>
+            <!-- <ion-item ui-sref="tab.contacts-findfromcontacts">
+    <i class="ion-person-stalker"></i> Find People from Contacts
+</ion-item>
+ -->
             <ion-item ui-sref="tab.contacts-findbyname">
                 <i class="ion-search"></i> Search by name
             </ion-item>
